tests/test_assets/semantic/invalid/pointers/readonly_pointer_mutation.expected
semantic error at line 10: assignment target is readonly
semantic error at line 11: assignment target is readonly
semantic error at line 12: assignment target is readonly
semantic error at line 14: compound assignment target is readonly
semantic error at line 15: increment/decrement target is readonly
5 semantic errors generated.
